Visits scheduled for today

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,6 +55,12 @@
         </ul>
       </li>
       <li>
+        <a routerLink="/visits-for-today" routerLinkActive="active" title="visits-for-today">
+          <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
+          <span>Visits for today</span>
+        </a>
+      </li>
+      <li>
         <a routerLink="/pettypes" routerLinkActive="active" title="pettypes">
           <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
           <span>Pet Types</span>
